Adding binary Hamming distance support for byte vectors